# cv_hogsvm_cpp

./: CMakeLists.txt  README.md
include/: hogsvm.hpp  utils.hpp
scripts/: seq_num.ps1  seq_num.sh
src/: hogsvm.cpp  main.cpp  utils.cpp
